# dot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/plans/: WAVE-PLANS.md
docs/specs/: did-dot-method-spec.md
rust/dot-core/: Cargo.toml
rust/dot-core/benches/: core_bench.rs
rust/dot-core/src/: chain.rs  encode.rs  lib.rs  observe.rs  sign.rs  trust.rs  types.rs  verify.rs
rust/dot-core/src/crypto/: blake3_hash.rs  ed25519.rs  metrics.rs  mod.rs  random.rs
rust/dot-core/src/tests/: chain_test.rs  crypto_test.rs  encode_test.rs  mod.rs  observe_test.rs  sign_test.rs  trust_test.rs  verify_test.rs
rust/dot-wasm/: Cargo.toml
rust/dot-wasm/src/: lib.rs
test-vectors/core/: crypto.json  dot-roundtrip.json  extended-crypto.json
tools/linguist/: README.md  languages.yml.patch
tools/vscode-dot/: README.md  dot-language-1.0.0.vsix  language-configuration.json  package.json
tools/vscode-dot/syntaxes/: dot.tmLanguage.json
