[package]
name = "dot-core"
version = "1.0.0-alpha.0"
edition = "2021"
description = "DOT Protocol R854 core — STCV kernel in Rust"
license = "MIT"

[dependencies]
blake3 = "1.5"
sodiumoxide = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false
