[package]
name = "dot-wasm"
version = "1.0.0-alpha.0"
edition = "2021"
description = "DOT Protocol R854 — WASM build for browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
